--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch:
 
 # Supported platforms / Ruby versions:
-#  - Ubuntu: MRI (3.1, 3.2, 3.3, 3.4), TruffleRuby (24), JRuby (9.4)
-#  - Windows: MRI (3.1)
+#  - Ubuntu: MRI (3.2, 3.3, 3.4), TruffleRuby (24), JRuby (9.4)
+#  - Windows: MRI (3.2)
 
 jobs:
   build:
@@ -27,7 +27,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ["3.1", "3.4"]
+        ruby: ["3.2", "3.4"]
         operating-system: [ubuntu-latest]
         fail_on_low_coverage: [true]
 
