feat(dsl): introduce be_* matchers for a clearer and more robust API
The previous API could be ambiguous, as top-level matchers like `have_dir`
produced failure messages from the perspective of the child path, which was
often unintuitive for users.

This change introduces a clear distinction between different types of
matchers:

- **Top-Level Subject Matchers (`be_dir`, `be_file`, `be_symlink`):**
  These are now the primary entry points for an expectation. They always
  validate the subject passed to `expect()`.

- **Top-Level Child Matchers (`have_dir`, `have_file`, `have_symlink`):**
  These remain for checking for a named entry within the subject directory.

- **Nested Declarations (`dir`, `file`):**
  These are unchanged and are used inside `.containing()` to describe a
  directory's contents.

As a direct result of this clearer API, the failure message reporting
system has also been overhauled to be consistently formatted, concise, and
easy to diagnose.

BREAKING CHANGE: The format of failure messages has been completely
redesigned. `be_dir`, `be_file`, and `be_symlink` are introduced as
the preferred top-level matchers for clarity.

Tests that assert on the specific text or structure of old failure
messages will fail.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,5 +11,10 @@ Metrics/AbcSize:
     - "spec/spec_helper.rb"
     - "spec/**/*_spec.rb"
 
+Metrics/ParameterLists:
+  Exclude:
+    - "spec/spec_helper.rb"
+    - "spec/**/*_spec.rb"
+
 AllCops:
   TargetRubyVersion: 3.2
