feat: ensure windows compatibility for Ruby MRI
Add a CI build and make sure all tests pass on Windows or don't run them if not supported on
Windows.

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 # Supported platforms / Ruby versions:
-#  - Ubuntu: MRI (3.2, 3.3, 3.4), TruffleRuby (24), JRuby (9.4)
+#  - Ubuntu: MRI (3.2, 3.3, 3.4)
 #  - Windows: MRI (3.2)
 
 jobs:
@@ -30,6 +30,10 @@ jobs:
         ruby: ["3.2", "3.4"]
         operating-system: [ubuntu-latest]
         fail_on_low_coverage: [true]
+        include:
+          - # Only test with minimal Ruby version on Windows
+            ruby: 3.2
+            operating-system: windows-latest
 
     steps:
       - name: Checkout
